--- a/source/index.html
+++ b/source/index.html
@@ -123,7 +123,7 @@
 
 </main>
 <footer class="footer">
-<div class="footer__container">а
+<div class="footer__container">
 <div class="footer__logo-container">
 <a href="" class="footer__logo"></a>
 
