Исправления Главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -1,147 +1,224 @@
 <!DOCTYPE html>
-<html class="page"lang="ru">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cat Energy</title>
-</head>
-<body class="page__body">
-<header class="main-header">
-<a href="#" class="main-header__logo-icon"><img class="main-header__logo-icon-img" src="images/logo-mobile.png" width="33.32" height="37.61" alt="Cat Energy logo.">
-<img class="main-header__logo-title-img" src="images/mobile-logo-text.svg" width="101" height="18" alt="Cat Energy">
-</a>
+<html class="page" lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cat Energy</title>
+  </head>
+  <body class="page__body">
+    <header class="main-header">
+      <a href="#" class="main-header__logo-icon"
+        ><img
+          class="main-header__logo-icon-img"
+          src="images/logo-mobile.png"
+          width="34"
+          height="38"
+          alt="Cat Energy logo."
+        />
+        <img
+          class="main-header__logo-title-img"
+          src="images/mobile-logo-text.svg"
+          width="101"
+          height="18"
+          alt="Cat Energy"
+        />
+      </a>
 
-<nav class="main-nav">
-<button class="main-nav__toggle" type="button">
-<span class="visually-hidden">Открыть меню</span>
-</button>
-<div class="main-nav__container">
-<ul class="main-nav__list site-list">
-<li class="site-list__item site-list__item--active"><a href="#">Главная</a></li>
-<li class="site-list__item"><a href="catalog.html">Каталог Продукции</a></li>
-<li class="site-list__item"><a href="" >Подбор Программы</a></li>
-</ul>
-</div>
-</nav>
-</header>
-<main class="main-content">
-<div class="main-content-container">
-<h1 class="main-content__title">Функциональное питание для котов</h1>
-<p class="main-content__slogan">Занялся собой? Займись котом!</p>
-<img src="images/index-can-mobile.png" alt="Банка корма для котов.">
-<a href="№" class="main-content__button-programs button" >Подобрать Программу</a>
-</div>
-<section class="programs">
-<div class="programs__container">
-<h2 class="visually-hidden">Доступные программы</h2>
-<ul class="programs__list">
-<li class="programs__item">
-<h3 class="programs__title programs__title--slim">Похудение</h3>
-<p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-<a href="" class="programs__link programs__link--arrow">Каталог Slim</a>
-
-</li>
-<li class="programs__item">
-<h3 class="programs__title programs__title--weight-gain">Набор Массы</h3>
-<p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-<a href="" class="programs__link programs__link--arrow">Каталог Pro</a>
-</li>
-
-</ul>
-</div>
-</section>
-<section class="principles">
-<div class="principles-container">
-<h2 class="principles__title">Как это работает</h2>
-<ul class="principles__list">
-<li class="principles__item principles__item--greens"><p class="">Функциональное питание
-содержит только полезные
-питательные вещества.</p></li>
-<li class="principles__item principles__item--solutable"><p class="">Выпускается в виде порошка,
-который нужно лишь залить
-кипятком и готово.</p></li>
-<li class="principles__item principles__item--silverwear"><p class="">Замените один-два приема
-обычной еды на наше
-функциональное питание.</p></li>
-<li class="principles__item principles__item--clock"><p class="">Уже через месяц наслаждайтесь
-изменениями к лучшему
-вашего питомца!</p></li>
-</ul>
-</div>
-</section>
-<section class="motivation">
-<div class="motivation-container">
-<h2 class="motivation__title">Живой Пример</h2>
-<p class="motivation__testimony">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-<dl class="motivation__list">
-<div class="motivation__item">
-<dt class="motivation__number">
-5 кг
-</dt>
-<dd class="motivation__description">
-снижение<br>
-веса
-</dd>
-
-</div>
-<div class="motivation__item">
-<dt class="motivation__number">
-60 дней
-</dt>
-<dd class="motivation__description">
-затрачено<br>
-времени
-</dd>
-
-</div>
-</dl>
-<p class="motivation__expenses">Затраты на питание: <span class="motivation__sum">15 000 РУБ.</span></p>
-</div>
-<div class="motivation__example">
-<div class="motivation__example-container">
-<img class="motivation__img-cat" src="" alt="Fat cat.">
-<label for="results" class="motivation__label"> Было</label>
-<input type="range" class="motivation__range" id="results">
-<label for="results" class="motivation__label">Стало</label>
-
-</div>
-</div>
-</section>
-<section class="contacts">
-<div class="contacts__container">
-<h2 class="visually-hidden">Наш адрес</h2>
-<div class="contacts__informative">
-<p class="contacts__advertisement">приглашаем к сотрудничеству дилеров!</p>
-</div>
-<adress class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</adress>
-</div>
-<div class="contacts__location">
-<img class="contacts__map" src="" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" >
-</div>
-</section>
-
-</main>
-<footer class="footer">
-<div class="footer__container">
-<div class="footer__logo-container">
-<a href="" class="footer__logo"></a>
-
-</div>
-<div class="footer__social social">
-<b class="social__title">Давайте дружить!</b>
-<ul class="footer__social-list">
-<li class="footer__social-item"><a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a></li>
-<li class="footer__social-item"><a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Ютубе</a></li>
-<li class="footer__social-item"><a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a></li>
-</ul>
-</div>
-</div>
-<div class="footer__copyright">
-<a class="footer__copyright__text" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-<a class="footer__copyright__link" href="https://htmlacademy.ru/intensive/htmlcss"></a>
-</div>
-</footer>
-
-</body>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <div class="page__centerer">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a href="#">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="catalog.html">Каталог Продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a href="">Подбор Программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="main-content">
+      <div class="page__centerer">
+        <h1 class="main-content__title">Функциональное питание для котов</h1>
+        <p class="main-content__slogan">Занялся собой? Займись котом!</p>
+        <img src="images/index-can-mobile.png" alt="Банка корма для котов." />
+        <a href="#" class="main-content__button-programs button"
+          >Подобрать Программу</a
+        >
+      </div>
+      <section class="programs">
+        <div class="page__centerer">
+          <h2 class="visually-hidden">Доступные программы</h2>
+          <ul class="programs__list">
+            <li class="programs__item">
+              <h3 class="programs__title programs__title--slim">Похудение</h3>
+              <p class="programs__description">
+                Ваш кот весит больше собаки и почти утратил способность лазить
+                по деревьям? Пора на диету! Cat Energy Slim поможет вашему
+                питомцу сбросить лишний вес.
+              </p>
+              <a href="" class="programs__link programs__link--arrow"
+                >Каталог Slim</a
+              >
+            </li>
+            <li class="programs__item">
+              <h3 class="programs__title programs__title--weight-gain">
+                Набор Массы
+              </h3>
+              <p class="programs__description">
+                Заработать авторитет среди дворовых котов и даже собак? Серия
+                Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+              </p>
+              <a href="#" class="programs__link programs__link--arrow"
+                >Каталог Pro</a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="principles">
+        <div class="page__centerer">
+          <h2 class="principles__title">Как это работает</h2>
+          <ul class="principles__list">
+            <li class="principles__item principles__item--greens">
+              <p class="">
+                Функциональное питание содержит только полезные питательные
+                вещества.
+              </p>
+            </li>
+            <li class="principles__item principles__item--solutable">
+              <p class="">
+                Выпускается в виде порошка, который нужно лишь залить кипятком и
+                готово.
+              </p>
+            </li>
+            <li class="principles__item principles__item--silverwear">
+              <p class="">
+                Замените один-два приема обычной еды на наше функциональное
+                питание.
+              </p>
+            </li>
+            <li class="principles__item principles__item--clock">
+              <p class="">
+                Уже через месяц наслаждайтесь изменениями к лучшему вашего
+                питомца!
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="motivation">
+        <div class="page__centerer">
+          <h2 class="motivation__title">Живой Пример</h2>
+          <p class="motivation__testimony">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+            этом он не менял своих привычек и по-прежнему спит по 16 часов в
+            день.
+          </p>
+          <dl class="motivation__list">
+            <div class="motivation__item">
+              <dt class="motivation__namer">снижение<br />
+                веса</dt>
+              <dd class="motivation__value">
+                5 кг
+              </dd>
+            </div>
+            <div class="motivation__item">
+              <dt class="motivation__name">затрачено<br />
+                времени</dt>
+              <dd class="motivation__value">
+                60 дней
+              </dd>
+            </div>
+            <div class="motivation__item">
+                <dt class="motivation__name">Затраты на питание:</dt>
+                <dd class="motivation__value">
+                    15 000 РУБ.
+                </dd>
+              </div>
+          </dl>
+        </div>
+        <div class="page__centerer">
+          <div class="motivation__example-container">
+            <img class="motivation__img-cat" src="#" alt="Fat cat." />
+            <label for="results" class="motivation__label"> Было</label>
+            <input type="range" class="motivation__range" id="results" />
+            <label for="results" class="motivation__label">Стало</label>
+          </div>
+        </div>
+      </section>
+      <section class="contacts">
+        <div class="page__centerer">
+          <h2 class="visually-hidden">Наш адрес</h2>
+          <div class="contacts__informative">
+            <p class="contacts__advertisement">
+              приглашаем к сотрудничеству дилеров!
+            </p>
+          </div>
+          <address class="contacts__address"></address>
+            ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          </address>
+        </div>
+        <div class="contacts__location">
+          <img
+            class="contacts__map"
+            src="#"
+            alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
+          />
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="">
+        <div class="footer__logo-container">
+          <a href="" class="footer__logo"></a>
+        </div>
+        <div class="footer__social social">
+          <b class="social__title">Давайте дружить!</b>
+          <ul class="footer__social-list">
+            <li class="footer__social-item">
+              <a
+                class="social__link social__link--vkontakte"
+                href="https://vk.com/htmlacademy"
+                >Мы в Вконтакте</a
+              >
+            </li>
+            <li class="footer__social-item">
+              <a
+                class="social__link social__link--youtube"
+                href="https://www.youtube.com/user/htmlacademyru"
+                >Мы в Ютубе</a
+              >
+            </li>
+            <li class="footer__social-item">
+              <a
+                class="social__link social__link--telegram"
+                href="https://t.me/htmlacademy"
+                >Мы в Телеграме</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <a
+          class="footer__copyright__text"
+          href="https://htmlacademy.ru/intensive/htmlcss"
+          >HTML Academy
+        </a>
+        <a
+          class="footer__copyright__link"
+          href="https://htmlacademy.ru/intensive/htmlcss"
+        ></a>
+      </div>
+    </footer>
+  </body>
 </html>
