Исправление разметки внутренних страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -247,14 +247,14 @@
               <a href="" class="goods-button">Заказать</a>
             </div>
           </li>
+          <li class="goods__item promotions">
+            <div class="promotions__container">
+              <h2 class="visually-hidden">Наши акции</h2>
+              <div class="promotions__icon-present"></div>
+              <p class="promotions__text">Закажите все и получите чехол для кота в подарок!</p>
+            </div>
+          </li>
         </ul>
-      </div>
-    </section>
-    <section class="promotions">
-      <div class="promotions__container">
-        <h2 class="visually-hidden">Наши акции</h2>
-        <div class="promotions__icon-present"></div>
-        <p class="promotions__text">Закажите все и получите чехол для кота в подарок!</p>
       </div>
     </section>
     <section class="contacts">
