Добавлен span для иконок почты и телефона

--- a/source/form.html
+++ b/source/form.html
@@ -72,9 +72,11 @@
             <legend class="profile-form__legend profile-form__legend-contacts">Контактные данные (владельца кота)</legend>
             <label class="profile-form__label" for="email">E-mail:<sup>*</sup>
               <input class="profile-form__input profile-form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
+              <span class="profile-form__icon-tel"></span>
             </label>
             <label class="profile-form__label" for="phone">Телефон:<sup>*</sup>
               <input class="profile-form__input profile-form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
+              <span class="profile-form__icon-tel"></span>
             </label>
           </fieldset>
           <fieldset class="profile-form__comments">
