--- a/source/form.html
+++ b/source/form.html
@@ -3,92 +3,92 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-  <main class="profile">
-    <div class="page-centerer">
+<main class="profile">
+  <div class="page__centerer">
 
-      <h1 class="profile__title">Подбор Программы</h1>
-      <p class="profile__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
+    <h1 class="profile__title">Подбор Программы</h1>
+    <p class="profile__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
-    </div>
-    <div class="profile-form">
-      <form class="profile-form" action="https://echo.htmlacademy.ru">
-        <div class="page-centerer">
-          <fieldset class="profile-form__group">
-            <legend class="visually-hidden">Информация о питомце</legend>
-            <label for="name" class="profile-form__label">Имя:<sup>*</sup>
-              <input class="profile-form__input profile-form__input--name" type="text" id="name" placeholder="Барсик" required>
-            </label>
-            <label class="profile-form__label" for="weight">Вес (кг):<sup>*</sup>
-              <input class="profile-form__input profile-form__input--weight" type="number" id="weight" placeholder="7" required>
-            </label>
-            <label class="profile-form__label" for="age">Возраст (лет):
-              <input class="profile-form__input" type="number" id="age" placeholder="7">
-            </label>
-          </fieldset>
-          <fieldset class="profile-form__filter-radio">
-            <legend class="visually-hidden">Нужды питомца</legend>
-            <label class="profile-form__label" for="weight-loss">Похудение
-              <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-loss" checked>
-            </label>
-            <label class="profile-form__label" for="weight-gain">Набор Массы
-              <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-gain">
-            </label>
-            <label class="profile-form__label" for="doubts">Не знаю (Нужен ваш совет)
-              <input class="profile-form__radio" type="radio" name="pet-needs" id="doubts">
-            </label>
-          </fieldset>
-          <fieldset class="profile-form__contacts">
-            <legend class="profile-form__legend profile-form__legend-contacts">Контактные данные (владельца кота)</legend>
-            <label class="profile-form__label" for="email">E-mail:<sup>*</sup>
-              <input class="profile-form__input profile-form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
-              <span class="profile-form__icon-tel"></span>
-            </label>
-            <label class="profile-form__label" for="phone">Телефон:<sup>*</sup>
-              <input class="profile-form__input profile-form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
-              <span class="profile-form__icon-tel"></span>
-            </label>
-          </fieldset>
-          <fieldset class="profile-form__comments">
-            <legend class="profile-form__legend profile-form__legend-comment">Комментарий</legend>
-            <textarea class="profile-form__feedback" name="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
-          </fieldset>
-          <fieldset class="profile-form__add-ons">
-            <legend class="profile-form__legend profile-form__legend-addons">Дополнительно</legend>
-            <label class="profile-form__label" for="sugar-sub">сахарозаменитель
-              <input class="profile-form__checkbox" type="checkbox" id="sugar-sub" value="sugar-substitute" name="add-ons" checked>
-            </label>
-            <label class="profile-form__label" for="water">питьевая вода
-              <input class="profile-form__checkbox" type="checkbox" id="water" name="add-ons" value="liquid">
-            </label>
-            <label class="profile-form__label" for="milk">молоко
-              <input class="profile-form__checkbox" type="checkbox" id="milk" name="add-on" value="dairy">
-            </label>
-            <label class="profile-form__label" for="vitamins">витамины
-              <input class="profile-form__checkbox" type="checkbox" id="vitamins" name="add-ons" value="supplement">
-            </label>
-            <div class="button-container">
-              <button class="profile-form__button button" type="button">отправить заявку</button>
-              <span class="profile-form__icon-required">* — Обязательные поля</span>
-            </div>
-          </fieldset>
-        </div>
-      </form>
-    </div>
-    <section class="contacts">
+  </div>
+  <div class="profile-form">
+    <form class="profile-form" action="https://echo.htmlacademy.ru">
       <div class="page__centerer">
-        <h2 class="visually-hidden">Наш адрес</h2>
-        <div class="contacts__informative">
-          <p class="contacts__advertisement">
-            приглашаем к сотрудничеству дилеров!
-          </p>
-        </div>
-        <address class="contacts__address">
-          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-        </address>
+        <fieldset class="profile-form__group form__legend">
+          <legend class="visually-hidden">Информация о питомце</legend>
+          <label for="name" class="profile-form__label">Имя:<sup>*</sup>
+            <input class="profile-form__input profile-form__input--name" type="text" id="name" placeholder="Барсик" required>
+          </label>
+          <label class="profile-form__label" for="weight">Вес (кг):<sup>*</sup>
+            <input class="profile-form__input profile-form__input--weight" type="number" id="weight" placeholder="7" required>
+          </label>
+          <label class="profile-form__label" for="age">Возраст (лет):
+            <input class="profile-form__input" type="number" id="age" placeholder="7">
+          </label>
+        </fieldset>
+        <fieldset class="profile-form__filter-radio form__legend">
+          <legend class="visually-hidden">Нужды питомца</legend>
+          <label class="profile-form__label" for="weight-loss">Похудение
+            <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-loss" checked>
+          </label>
+          <label class="profile-form__label" for="weight-gain">Набор Массы
+            <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-gain">
+          </label>
+          <label class="profile-form__label" for="doubts">Не знаю (Нужен ваш совет)
+            <input class="profile-form__radio" type="radio" name="pet-needs" id="doubts">
+          </label>
+        </fieldset>
+        <fieldset class="profile-form__contacts form__legend">
+          <legend class="profile-form__legend profile-form__legend-contacts">Контактные данные (владельца кота)</legend>
+          <label class="profile-form__label" for="email">E-mail:<sup>*</sup>
+            <input class="profile-form__input profile-form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
+            <span class="profile-form__icon-tel"></span>
+          </label>
+          <label class="profile-form__label" for="phone">Телефон:<sup>*</sup>
+            <input class="profile-form__input profile-form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
+            <span class="profile-form__icon-tel"></span>
+          </label>
+        </fieldset>
+        <fieldset class="profile-form__comments form__legend">
+          <legend class="profile-form__legend profile-form__legend-comment">Комментарий</legend>
+          <textarea class="profile-form__feedback" name="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
+        </fieldset>
+        <fieldset class="profile-form__add-ons form__legend">
+          <legend class="profile-form__legend profile-form__legend-addons">Дополнительно</legend>
+          <label class="profile-form__label" for="sugar-sub">сахарозаменитель
+            <input class="profile-form__checkbox" type="checkbox" id="sugar-sub" value="sugar-substitute" name="add-ons" checked>
+          </label>
+          <label class="profile-form__label" for="water">питьевая вода
+            <input class="profile-form__checkbox" type="checkbox" id="water" name="add-ons" value="liquid">
+          </label>
+          <label class="profile-form__label" for="milk">молоко
+            <input class="profile-form__checkbox" type="checkbox" id="milk" name="add-on" value="dairy">
+          </label>
+          <label class="profile-form__label" for="vitamins">витамины
+            <input class="profile-form__checkbox" type="checkbox" id="vitamins" name="add-ons" value="supplement">
+          </label>
+          <div class="button-container">
+            <button class="profile-form__button button" type="button">отправить заявку</button>
+            <span class="profile-form__icon-required">* — Обязательные поля</span>
+          </div>
+        </fieldset>
       </div>
-      <div class="contacts__location">
-        <img class="contacts__map" src="#" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" />
+    </form>
+  </div>
+  <section class="contacts">
+    <div class="page__centerer">
+      <h2 class="visually-hidden">Наш адрес</h2>
+      <div class="contacts__informative">
+        <p class="contacts__advertisement">
+          приглашаем к сотрудничеству дилеров!
+        </p>
       </div>
-    </section>
-  </main>
+      <address class="contacts__address">
+        ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+      </address>
+    </div>
+    <div class="contacts__location">
+      <img class="contacts__map" src="#" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" />
+    </div>
+  </section>
+</main>
 {% endblock %}
