--- a/source/index.html
+++ b/source/index.html
@@ -3,124 +3,130 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-  <main class="main-content">
+<main class="main-content">
+  <div class="main-content__banner">
+    <h1 class="main-content__title">Функциональное питание для котов</h1>
+    <p class="main-content__slogan">Занялся собой? Займись котом!</p>
+    <img class="main-content__product-img" src="img/index-can-mobile.png" alt="Банка корма для котов." />
+    <a href="#" class="main-content__button-programs button">Подобрать Программу</a>
+  </div>
+  <section class="programs">
     <div class="page__centerer">
-      <h1 class="main-content__title">Функциональное питание для котов</h1>
-      <p class="main-content__slogan">Занялся собой? Займись котом!</p>
-      <img src="images/index-can-mobile.png" alt="Банка корма для котов." />
-      <a href="#" class="main-content__button-programs button">Подобрать Программу</a>
-    </div>
-    <section class="programs">
-      <div class="page__centerer">
-        <h2 class="visually-hidden">Доступные программы</h2>
-        <ul class="programs__list">
-          <li class="programs__item">
-            <h3 class="programs__title programs__title--slim">Похудение</h3>
-            <p class="programs__description">
-              Ваш кот весит больше собаки и почти утратил способность лазить
-              по деревьям? Пора на диету! Cat Energy Slim поможет вашему
-              питомцу сбросить лишний вес.
-            </p>
-            <a href="" class="programs__link programs__link--arrow">Каталог Slim</a>
-          </li>
-          <li class="programs__item">
-            <h3 class="programs__title programs__title--weight-gain">
-              Набор Массы
-            </h3>
-            <p class="programs__description">
-              Заработать авторитет среди дворовых котов и даже собак? Серия
-              Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-            </p>
-            <a href="#" class="programs__link programs__link--arrow">Каталог Pro</a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="principles">
-      <div class="page__centerer">
-        <h2 class="principles__title">Как это работает</h2>
-        <ul class="principles__list">
-          <li class="principles__item principles__item--greens">
-            <p class="">
-              Функциональное питание содержит только полезные питательные
-              вещества.
-            </p>
-          </li>
-          <li class="principles__item principles__item--solutable">
-            <p class="">
-              Выпускается в виде порошка, который нужно лишь залить кипятком и
-              готово.
-            </p>
-          </li>
-          <li class="principles__item principles__item--silverwear">
-            <p class="">
-              Замените один-два приема обычной еды на наше функциональное
-              питание.
-            </p>
-          </li>
-          <li class="principles__item principles__item--clock">
-            <p class="">
-              Уже через месяц наслаждайтесь изменениями к лучшему вашего
-              питомца!
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="motivation">
-      <div class="page__centerer">
-        <h2 class="motivation__title">Живой Пример</h2>
-        <p class="motivation__testimony">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
-          Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
-          этом он не менял своих привычек и по-прежнему спит по 16 часов в
-          день.
-        </p>
-        <dl class="motivation__list">
-          <div class="motivation__item">
-            <dt class="motivation__namer">
-              снижение<br />
-              веса
-            </dt>
-            <dd class="motivation__value">5 кг</dd>
-          </div>
-          <div class="motivation__item">
-            <dt class="motivation__name">
-              затрачено<br />
-              времени
-            </dt>
-            <dd class="motivation__value">60 дней</dd>
-          </div>
-          <div class="motivation__item">
-            <dt class="motivation__name">Затраты на питание:</dt>
-            <dd class="motivation__value">15 000 РУБ.</dd>
-          </div>
-        </dl>
-      </div>
-      <div class="page__centerer">
-        <div class="motivation__example-container">
-          <img class="motivation__img-cat" src="#" alt="Fat cat." />
-          <label for="results" class="motivation__label"> Было</label>
-          <input type="range" class="motivation__range" id="results" />
-          <label for="results" class="motivation__label">Стало</label>
-        </div>
-      </div>
-    </section>
-    <section class="contacts">
-      <div class="page__centerer">
-        <h2 class="visually-hidden">Наш адрес</h2>
-        <div class="contacts__informative">
-          <p class="contacts__advertisement">
-            приглашаем к сотрудничеству дилеров!
+      <h2 class="visually-hidden">Доступные программы</h2>
+      <ul class="programs__list">
+        <li class="programs__item">
+          <h3 class="programs__title programs__title--slim">Похудение</h3>
+          <p class="programs__description">
+            Ваш кот весит больше собаки и почти утратил способность лазить
+            по деревьям? Пора на диету! Cat Energy Slim поможет вашему
+            питомцу сбросить лишний вес.
           </p>
+          <a href="#" class="programs__link programs__link--arrow">Каталог Slim</a>
+        </li>
+        <li class="programs__item">
+          <h3 class="programs__title programs__title--weight-gain">
+            Набор Массы
+          </h3>
+          <p class="programs__description">
+            Заработать авторитет среди дворовых котов и даже собак? Серия
+            Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a href="#" class="programs__link programs__link--arrow">Каталог Pro</a>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="principles">
+    <div class="page__centerer">
+      <h2 class="principles__title">Как это работает</h2>
+      <ul class="principles__list">
+        <li class="principles__item principles__item--greens">
+
+          Функциональное питание содержит только полезные питательные
+          вещества.
+
+        </li>
+        <li class="principles__item principles__item--solutable">
+
+          Выпускается в виде порошка, который нужно лишь залить кипятком и
+          готово.
+
+        </li>
+        <li class="principles__item principles__item--silverwear">
+
+          Замените один-два приема обычной еды на наше функциональное
+          питание.
+
+        </li>
+        <li class="principles__item principles__item--clock">
+
+          Уже через месяц наслаждайтесь изменениями к лучшему вашего
+          питомца!
+
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="motivation">
+    <div class="page__centerer">
+      <h2 class="motivation__title">Живой Пример</h2>
+      <p class="motivation__testimony">
+        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+        Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+        этом он не менял своих привычек и по-прежнему спит по 16 часов в
+        день.
+      </p>
+      <dl class="motivation__list">
+        <div class="motivation__item motivation__item--module">
+          <dt class="motivation__name">
+            снижение<br />
+            веса
+          </dt>
+          <dd class="motivation__value">5 кг</dd>
         </div>
-        <address class="contacts__address">
-          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-        </address>
+        <div class="motivation__item motivation__item--module">
+          <dt class="motivation__name">
+            затрачено<br />
+            времени
+          </dt>
+          <dd class="motivation__value">60 дней</dd>
+        </div>
+        <div class="motivation__item">
+          <dt class="motivation__name">Затраты на питание:</dt>
+          <dd class="motivation__value">15 000 РУБ.</dd>
+        </div>
+      </dl>
+    </div>
+    <div class="page__centerer">
+      <div class="motivation__example-container">
+        <figure class="motivation__slider">
+          <figcaption class="visually-hidden">Результаты До и После.</figcaption>
+          <img class="motivation__before-img" src="img/before-cat.png" alt="Fat cat.">
+          <img class="motivation__after-img" src="img/after-cat.png" alt="Slim cat.">
+        </figure>
+        <button class="motivation__button">Было</button>
+        <div class="motivation__scale">
+          <div class="motivation__thumb"></div>
+        </div>
+        <button class="motivation__button">Стало</button>
       </div>
-      <div class="contacts__location">
-        <img class="contacts__map" src="#" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" />
+    </div>
+  </section>
+  <section class="contacts">
+    <div class="contacts__wrapper">
+      <h2 class="visually-hidden">Наш адрес</h2>
+      <div class="contacts__informative">
+        <p class="contacts__advertisement">
+          приглашаем к сотрудничеству дилеров!
+        </p>
       </div>
-    </section>
-  </main>
+      <address class="contacts__address">
+        ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+      </address>
+    </div>
+    <div class="contacts__location">
+      <img class="contacts__map" src="img/location.png" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" width="320" height="362" />
+    </div>
+  </section>
+</main>
 {% endblock %}
