Исправляет меню сайта

--- a/source/form.html
+++ b/source/form.html
@@ -10,9 +10,9 @@
     <p class="profile__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
   </div>
-  <section class="profile-form">
+  <section class="profile">
     <h2 class="visually-hidden">Форма Заявок</h2>
-    <form class="profile-form" action="https://echo.htmlacademy.ru">
+    <form class="profile__form" action="https://echo.htmlacademy.ru">
       <div class="page__centerer">
         <fieldset class="profile-form__group form__legend">
           <legend class="visually-hidden">Информация о питомце</legend>
@@ -26,7 +26,7 @@
             <input class="profile-form__input profile-form__input--age" type="number" id="age" placeholder="7">
           </label>
         </fieldset>
-        <fieldset class="profile-form__filter-radio form__legend">
+        <fieldset class="profile-form__filter-radio form__legend--border">
           <legend class="visually-hidden">Нужды питомца</legend>
           <label class="profile-form__label" for="weight-loss">
             <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-loss" checked>Похудение
