Исправляет стилизацию страниц

--- a/source/index.html
+++ b/source/index.html
@@ -77,14 +77,14 @@
         день.
       </p>
       <dl class="motivation__list">
-        <div class="motivation__item motivation__item--module">
+        <div class="motivation__item motivation__item--badge">
           <dt class="motivation__name">
             снижение<br />
             веса
           </dt>
           <dd class="motivation__value">5 кг</dd>
         </div>
-        <div class="motivation__item motivation__item--module">
+        <div class="motivation__item motivation__item--badge">
           <dt class="motivation__name">
             затрачено<br />
             времени
