--- a/source/form.html
+++ b/source/form.html
@@ -16,13 +16,13 @@
       <div class="page__centerer">
         <fieldset class="profile-form__group form__legend">
           <legend class="visually-hidden">Информация о питомце</legend>
-          <label for="name" class="profile-form__label">Имя:<sup>*</sup>
+          <label for="name" class="profile-form__label profile-form__label--sb">Имя:<sup>*</sup>
             <input class="profile-form__input profile-form__input--name" type="text" id="name" placeholder="Барсик" required>
-          </label></br>
-          <label class="profile-form__label" for="weight">Вес (кг):<sup>*</sup>
+          </label>
+          <label class="profile-form__label profile-form__label--sb" for="weight">Вес (кг):<sup>*</sup>
             <input class="profile-form__input profile-form__input--weight" type="number" id="weight" placeholder="7" required>
           </label>
-          <label class="profile-form__label" for="age">Возраст (лет):
+          <label class="profile-form__label profile-form__label--sb" for="age">Возраст (лет):
             <input class="profile-form__input profile-form__input--age" type="number" id="age" placeholder="7">
           </label>
         </fieldset>
@@ -40,11 +40,11 @@
         </fieldset>
         <fieldset class="profile-form__contacts form__legend">
           <legend class="profile-form__legend profile-form__legend--contacts">Контактные данные (владельца кота)</legend>
-          <label class="profile-form__label" for="email">E-mail:<sup>*</sup>
+          <label class="profile-form__label profile-form__label--sb" for="email">E-mail:<sup>*</sup>
             <input class="profile-form__input profile-form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
             <span class="profile-form__icon-tel"></span>
-          </label><br>
-          <label class="profile-form__label" for="phone">Телефон:<sup>*</sup>
+          </label>
+          <label class="profile-form__label profile-form__label--sb" for="phone">Телефон:<sup>*</sup>
             <input class="profile-form__input profile-form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
             <span class="profile-form__icon-tel"></span>
           </label>
