--- a/source/form.html
+++ b/source/form.html
@@ -10,66 +10,66 @@
     <p class="profile__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
   </div>
-  <section class="profile">
+  <section class="form-profile">
     <h2 class="visually-hidden">Форма Заявок</h2>
-    <form class="profile__form" action="https://echo.htmlacademy.ru">
+    <form class="form" action="https://echo.htmlacademy.ru">
       <div class="page__centerer">
-        <fieldset class="profile-form__group form__legend">
+        <fieldset class="form__group form__legend">
           <legend class="visually-hidden">Информация о питомце</legend>
-          <label for="name" class="profile-form__label profile-form__label--sb">Имя:<sup>*</sup>
-            <input class="profile-form__input profile-form__input--name" type="text" id="name" placeholder="Барсик" required>
+          <label for="name" class="form__label form__label--sb">Имя:<sup>*</sup>
+            <input class="form__input form__input--name" type="text" id="name" placeholder="Барсик" required>
           </label>
-          <label class="profile-form__label profile-form__label--sb" for="weight">Вес (кг):<sup>*</sup>
-            <input class="profile-form__input profile-form__input--weight" type="number" id="weight" placeholder="7" required>
+          <label class="form__label form__label--sb" for="weight">Вес (кг):<sup>*</sup>
+            <input class="form__input form__input--weight" type="number" id="weight" placeholder="7" required>
           </label>
-          <label class="profile-form__label profile-form__label--sb" for="age">Возраст (лет):
-            <input class="profile-form__input profile-form__input--age" type="number" id="age" placeholder="7">
+          <label class="form__label form__label--sb" for="age">Возраст (лет):
+            <input class="form__input form__input--age" type="number" id="age" placeholder="7">
           </label>
         </fieldset>
-        <fieldset class="profile-form__filter-radio form__legend--border">
+        <fieldset class="form__filter-radio form__legend--border">
           <legend class="visually-hidden">Нужды питомца</legend>
-          <label class="profile-form__label" for="weight-loss">
-            <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-loss" checked>Похудение
+          <label class="form__label" for="weight-loss">
+            <input class="form__radio" type="radio" name="pet-needs" id="weight-loss" checked>Похудение
           </label>
-          <label class="profile-form__label" for="weight-gain">
-            <input class="profile-form__radio" type="radio" name="pet-needs" id="weight-gain">Набор Массы
+          <label class="form__label" for="weight-gain">
+            <input class="form__radio" type="radio" name="pet-needs" id="weight-gain">Набор Массы
           </label>
-          <label class="profile-form__label" for="doubts">
-            <input class="profile-form__radio" type="radio" name="pet-needs" id="doubts">Не знаю (Нужен ваш совет)
-          </label>
-        </fieldset>
-        <fieldset class="profile-form__contacts form__legend">
-          <legend class="profile-form__legend profile-form__legend--contacts">Контактные данные (владельца кота)</legend>
-          <label class="profile-form__label profile-form__label--sb" for="email">E-mail:<sup>*</sup>
-            <input class="profile-form__input profile-form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
-            <span class="profile-form__icon-tel"></span>
-          </label>
-          <label class="profile-form__label profile-form__label--sb" for="phone">Телефон:<sup>*</sup>
-            <input class="profile-form__input profile-form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
-            <span class="profile-form__icon-tel"></span>
+          <label class="form__label" for="doubts">
+            <input class="form__radio" type="radio" name="pet-needs" id="doubts">Не знаю (Нужен ваш совет)
           </label>
         </fieldset>
-        <fieldset class="profile-form__comments form__legend">
-          <legend class="profile-form__legend profile-form__legend-comment">Комментарий</legend>
-          <textarea class="profile-form__feedback" name="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
+        <fieldset class="form__contacts form__legend">
+          <legend class="form__legend form__legend--contacts">Контактные данные (владельца кота)</legend>
+          <label class="form__label form__label--sb" for="email">E-mail:<sup>*</sup>
+            <input class="form__input form__input--email" type="number" id="email" placeholder="kuklachev@gmail.com" required>
+            <span class="form__icon-tel"></span>
+          </label>
+          <label class="form__label form__label--sb" for="phone">Телефон:<sup>*</sup>
+            <input class="form__input form__input--phone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="8 (960) 900-60-90" required>
+            <span class="form__icon-tel"></span>
+          </label>
         </fieldset>
-        <fieldset class="profile-form__add-ons form__legend">
-          <legend class="profile-form__legend profile-form__legend-addons">Дополнительно</legend>
-          <label class="profile-form__label" for="sugar-sub">
-            <input class="profile-form__checkbox" type="checkbox" id="sugar-sub" value="sugar-substitute" name="add-ons" checked>сахарозаменитель
+        <fieldset class="form__comments form__legend">
+          <legend class="form__legend form__legend-comment">Комментарий</legend>
+          <textarea class="form__feedback" name="comment" cols="30" rows="10">Расскажите обо всех повадках кота</textarea>
+        </fieldset>
+        <fieldset class="form__add-ons form__legend">
+          <legend class="form__legend form__legend-addons">Дополнительно</legend>
+          <label class="form__label" for="sugar-sub">
+            <input class="form__checkbox" type="checkbox" id="sugar-sub" value="sugar-substitute" name="add-ons" checked>сахарозаменитель
           </label>
-          <label class="profile-form__label" for="water">
-            <input class="profile-form__checkbox" type="checkbox" id="water" name="add-ons" value="liquid">питьевая вода
+          <label class="form__label" for="water">
+            <input class="form__checkbox" type="checkbox" id="water" name="add-ons" value="liquid">питьевая вода
           </label>
-          <label class="profile-form__label" for="milk">
-            <input class="profile-form__checkbox" type="checkbox" id="milk" name="add-on" value="dairy">молоко
+          <label class="form__label" for="milk">
+            <input class="form__checkbox" type="checkbox" id="milk" name="add-on" value="dairy">молоко
           </label>
-          <label class="profile-form__label" for="vitamins">
-            <input class="profile-form__checkbox" type="checkbox" id="vitamins" name="add-ons" value="supplement">витамины
+          <label class="form__label" for="vitamins">
+            <input class="form__checkbox" type="checkbox" id="vitamins" name="add-ons" value="supplement">витамины
           </label>
           <div class="button-container">
-            <button class="profile-form__button button" type="button">отправить заявку</button>
-            <span class="profile-form__icon-required">* — Обязательные поля</span>
+            <button class="form__button button" type="button">отправить заявку</button>
+            <span class="form__icon-required">* — Обязательные поля</span>
           </div>
         </fieldset>
       </div>
