Поправки к заданию Стилизация страниц проекта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -188,7 +188,7 @@
               больше!</p>
           </div>
         </div>
-        <a href="#" class="catalog-button --secondary-color">Показать все</a>
+        <a href="#" class="catalog-button catalog-button--secondary-color">Показать все</a>
       </li>
     </ul>
   </div>
