--- a/source/index.html
+++ b/source/index.html
@@ -3,11 +3,15 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-<main class="main-content page__centerer">
+<main class="main-content">
   <div class="main-content__banner">
     <h1 class="main-content__title">Функциональное питание для котов</h1>
     <p class="main-content__slogan">Занялся собой? Займись котом!</p>
-    <img class="main-content__product-img" src="img/index-can-mobile.png" alt="Банка корма для котов." />
+    <picture class="main-content__banner-product">
+      <source media="(min-width: 1280px)" srcset="img/index-can-desktop.png" width="552" height="499">
+      <source media="(min-width: 768px)" srcset="img/index-can-tablet.jpg" width="709" height="609">
+      <img class="main-content__product-img" src="img/index-can-mobile.png" alt="Банка корма для котов." />
+    </picture>
     <a href="#" class="main-content__button-programs button">Подобрать Программу</a>
   </div>
   <section class="programs">
@@ -40,25 +44,25 @@
     <div class="page__centerer">
       <h2 class="principles__title">Как это работает</h2>
       <ul class="principles__list">
-        <li class="principles__item principles__item--greens">
+        <li class="principles__item principles__item--icon_leaf">
 
           Функциональное питание содержит только полезные питательные
           вещества.
 
         </li>
-        <li class="principles__item principles__item--solutable">
+        <li class="principles__item principles__item--icon_glass">
 
           Выпускается в виде порошка, который нужно лишь залить кипятком и
           готово.
 
         </li>
-        <li class="principles__item principles__item--silverwear">
+        <li class="principles__item principles__item--icon_eat">
 
           Замените один-два приема обычной еды на наше функциональное
           питание.
 
         </li>
-        <li class="principles__item principles__item--clock">
+        <li class="principles__item principles__item--icon_alarm">
 
           Уже через месяц наслаждайтесь изменениями к лучшему вашего
           питомца!
@@ -112,8 +116,8 @@
       </div>
     </div>
   </section>
-  <section class="contacts page__centerer">
-    <div class="contacts__wrapper">
+  <section class="contacts">
+    <div class="contacts__wrapper page__centerer">
       <h2 class="visually-hidden">Наш адрес</h2>
       <div class="contacts__informative">
         <p class="contacts__advertisement">
