Адаптивная сетка для главной страницы исправление

--- a/source/index.html
+++ b/source/index.html
@@ -8,8 +8,8 @@
     <h1 class="main-content__title">Функциональное питание для котов</h1>
     <p class="main-content__slogan">Занялся собой? Займись котом!</p>
     <picture class="main-content__banner-product">
-      <source media="(min-width: 1280px)" srcset="img/index-can-desktop.png" width="552" height="499">
-      <source media="(min-width: 768px)" srcset="img/index-can-tablet.jpg" width="709" height="609">
+      <source media="(min-width: 1280px)" srcset="img/index-can-desktop.png">
+      <source media="(min-width: 768px)" srcset="img/index-can-tablet.jpg">
       <img class="main-content__product-img" src="img/index-can-mobile.png" alt="Банка корма для котов." />
     </picture>
     <a href="#" class="main-content__button-programs button">Подобрать Программу</a>
