--- a/source/form.html
+++ b/source/form.html
@@ -10,10 +10,10 @@
     <p class="profile__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
   </div>
-  <section class="form-profile">
+  <section class="form-profile page__centerer">
     <h2 class="visually-hidden">Форма Заявок</h2>
     <form class="form" action="https://echo.htmlacademy.ru">
-      <div class="page__centerer">
+      {# <div class="page__centerer"> #}
         <fieldset class="form__group form__legend">
           <legend class="visually-hidden">Информация о питомце</legend>
           <label for="name" class="form__label form__label--sb">Имя:<sup>*</sup>
@@ -72,7 +72,8 @@
             <span class="form__icon-required">* — Обязательные поля</span>
           </div>
         </fieldset>
-      </div>
+        {#
+      </div> #}
     </form>
   </section>
   <section class="contacts contacts--theme page__centerer">
