--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,7 @@
         <div class="catalog__container">
           <div class="catalog__product-photo">
             <a href="#" class="catalog__link">
-              <img class="catalog__image" src="img/products/mobile-chicken-small.png" alt="Cat Energy Pro chicken 500 gramm." width="68" height="86">
+              <img class="catalog__image" src="img/products/mobile-chicken-small.png" alt="Cat Energy Pro fish 500 gramm." width="68" height="78">
             </a>
           </div>
           <div class="catalog__product-info">
@@ -21,8 +21,12 @@
             <dl class="catalog__stats stats">
               <dt class="stats__info">Масса</dt>
               <dd class="stats__value">500 г</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Вкус</dt>
               <dd class="stats__value">Гречка</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Цена</dt>
               <dd class="stats__value">400 Р.</dd>
             </dl>
@@ -45,8 +49,12 @@
             <dl class="catalog__stats stats">
               <dt class="stats__info">Масса</dt>
               <dd class="stats__value">1000 г</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Вкус</dt>
               <dd class="stats__value">Курица</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Цена</dt>
               <dd class="stats__value">1000 Р.</dd>
             </dl>
@@ -69,8 +77,12 @@
             <dl class="catalog__stats stats">
               <dt class="stats__info">Масса</dt>
               <dd class="stats__value">500 г</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Вкус</dt>
               <dd class="stats__value">Рыба</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Цена</dt>
               <dd class="stats__value">700 Р.</dd>
             </dl>
@@ -93,8 +105,12 @@
             <dl class="catalog__stats stats">
               <dt class="stats__info">Масса</dt>
               <dd class="stats__value">1000 г</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Вкус</dt>
               <dd class="stats__value">Рыба</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Цена</dt>
               <dd class="stats__value">1000 Р.</dd>
             </dl>
@@ -117,8 +133,12 @@
             <dl class="catalog__stats stats">
               <dt class="stats__info">Масса</dt>
               <dd class="stats__value">500 г</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Вкус</dt>
               <dd class="stats__value">Гречка</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Цена</dt>
               <dd class="stats__value">400 Р.</dd>
             </dl>
@@ -141,8 +161,12 @@
             <dl class="catalog__stats stats">
               <dt class="stats__info">Масса</dt>
               <dd class="stats__value">1000 г</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Вкус</dt>
               <dd class="stats__value">Гречка</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Цена</dt>
               <dd class="stats__value">700 Р.</dd>
             </dl>
@@ -165,8 +189,12 @@
             <dl class="catalog__stats stats">
               <dt class="stats__info">Масса</dt>
               <dd class="stats__value">500 г</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Вкус</dt>
               <dd class="stats__value">Рис</dd>
+            </dl>
+            <dl class="catalog__stats stats">
               <dt class="stats__info">Цена</dt>
               <dd class="stats__value">500 Р.</dd>
             </dl>
@@ -199,32 +227,40 @@
         <li class="goods__item more-goods">
           <div class="more-goods__container">
             <h3 class="more-goods__title">Сахарозаменитель</h3>
-            <p class="more-goods__info">1 упаковка (100 г)</p>
-            <p class="more-goods__value">200 Р.</p>
+            <div class="more-goods__wrapper">
+              <p class="more-goods__info">1 упаковка (100 г)</p>
+              <p class="more-goods__value">200 Р.</p>
+            </div>
             <a href="" class="goods-button button">Заказать</a>
           </div>
         </li>
         <li class="goods__item more-goods">
           <div class="more-goods__container">
             <h3 class="more-goods__title">Питьевая Вода</h3>
-            <p class="more-goods__info">5 литров</p>
-            <p class="more-goods__value">50 Р.</p>
+            <div class="more-goods__wrapper">
+              <p class="more-goods__info">5 литров</p>
+              <p class="more-goods__value">50 Р.</p>
+            </div>
             <a href="" class="goods-button button">Заказать</a>
           </div>
         </li>
         <li class="goods__item more-goods">
           <div class="more-goods__container">
             <h3 class="more-goods__title">Молоко</h3>
-            <p class="more-goods__info">1 литр</p>
-            <p class="more-goods__value">100 Р.</p>
+            <div class="more-goods__wrapper">
+              <p class="more-goods__info">1 литр</p>
+              <p class="more-goods__value">100 Р.</p>
+            </div>
             <a href="" class="goods-button button">Заказать</a>
           </div>
         </li>
         <li class="goods__item more-goods">
           <div class="more-goods__container">
             <h3 class="more-goods__title">Витамины</h3>
-            <p class="more-goods__info">1 упаковка (30 г)</p>
-            <p class="more-goods__value">300 Р.</p>
+            <div class="more-goods__wrapper">
+              <p class="more-goods__info">1 упаковка (30 г)</p>
+              <p class="more-goods__value">300 Р.</p>
+            </div>
             <a href="#" class="goods-button button">Заказать</a>
           </div>
         </li>
