--- a/source/catalog.html
+++ b/source/catalog.html
@@ -202,7 +202,7 @@
         </div>
         <a href="#" class="catalog-button">Заказать</a>
       </li>
-      <li class="catalog catalog__item">
+      <li class="catalog__item">
         <div class="catalog__container catalog__container--last">
           <div class="catalog__icon catalog__icon--plus">
             <a href="#" class="catalog__link">
