--- a/source/form.html
+++ b/source/form.html
@@ -27,7 +27,7 @@
               <input class="form__input form__input--info" type="number" id="age" placeholder="7">
             </label>
           </fieldset>
-          <fieldset class="form__filter-radio form__legend--border">
+          <fieldset class="form__filter-radio form__filter--border">
             <legend class="visually-hidden">Нужды питомца</legend>
             <label class="form__label form__label--wl" for="weight-loss">
               <input class="form__radio" type="radio" name="pet-needs" id="weight-loss" checked>Похудение
@@ -90,7 +90,7 @@
 
     </form>
   </section>
-  <section class="contacts contact--theme">
+  <section class="contacts contacts--theme">
     <div class="contacts__wrapper page__centerer">
       <h2 class="visually-hidden">Наш адрес</h2>
       <div class="contacts__informative">
